# xmole2

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  README.md  README.zh-CN.md  deps.json  vcpkg.json
.agents/skills/codebase-review/: SKILL.md
.agents/skills/cross-reference-review/: SKILL.md
.agents/skills/xmole2-driver-development/: SKILL.md
.github/workflows/: ci.yml
cmake/: CheckPublicHeaders.cmake  GenerateCfbUnicodeSimpleUppercase.cmake  Xmole2Dependencies.cmake  Xmole2Module.cmake  xmole2Config.cmake.in
docs/: reference-snapshots.md  task-records.md
docs/adr/: 0001-architecture-baseline.md  0002-external-resource-resolver-contract.md
docs/fixtures/: catalog.md
docs/meetings/: 2026-07-15-office-architecture-all-sessions.md  2026-07-15-office-architecture-grill.md
docs/reviews/: base-io-review.md  cfb-review.md
docs/spec/: README.md  architecture.md  cfb.md  code-style.md  dependencies.md  development-process.md  fidelity.md  io.md  migration.md  office-runtime.md  office-standard.md  public-api.md  review.md  security.md  testing.md  zip.md
docs/vertical-analysis-report/: cfb-report.md
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/include/xmole2/base/: error.hpp  export.hpp  external_resource_resolver.hpp  operation_context.hpp
libs/base/src/: error.cpp  external_resource_resolver.cpp  operation_context.cpp
libs/cfb/: CMakeLists.txt
libs/cfb/include/xmole2/cfb/: cfb_stream_reader.hpp  compound_file_header.hpp  directory_index.hpp  error.hpp  export.hpp  mini_stream_allocation_table.hpp  sector_allocation_table.hpp
libs/cfb/src/: cfb_internal_utils.hpp  cfb_name_internal.cpp  cfb_name_internal.hpp  cfb_stream_reader.cpp  compound_file_header.cpp  compound_file_header_internal.hpp  directory_index.cpp  error.cpp  mini_stream_allocation_table.cpp  sector_allocation_table.cpp  sector_reader_internal.cpp  sector_reader_internal.hpp  unicode_simple_uppercase_generated.hpp
libs/io/: CMakeLists.txt
libs/io/include/xmole2/io/: atomic_file_writer.hpp  byte_sink.hpp  byte_source.hpp  error.hpp  export.hpp  random_access_reader.hpp  source_lease.hpp  temporary_file.hpp
libs/io/src/: atomic_file_writer.cpp  error.cpp  file_io.cpp  file_io.hpp  source_lease.cpp  temporary_file.cpp
libs/zip/: CMakeLists.txt
libs/zip/include/xmole2/zip/: error.hpp  export.hpp  zip_archive.hpp  zip_entry.hpp  zip_entry_reader.hpp
libs/zip/src/: backend.cpp  backend.hpp  error.cpp  zip_archive.cpp  zip_entry_reader.cpp
tests/: CMakeLists.txt
tests/base/: error_contract_test.cpp  operation_context_contract_test.cpp
tests/cfb/: cfb_contract_test.cpp  cfb_directory_contract_test.cpp  cfb_mini_stream_contract_test.cpp  cfb_sector_table_contract_test.cpp  cfb_stream_reader_contract_test.cpp  cfb_test_utils.hpp
tests/dependencies/: dependency_smoke_test.cpp
tests/io/: io_contract_main.cpp  source_contract_test.cpp  storage_contract_test.cpp
tests/package-consumer/: CMakeLists.txt  main.cpp
tests/zip/: zip_contract_test.cpp
